before arow box

--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,6 @@ li {
     padding: 35px 0 30px 0;
     width: 100%;
     background: #f6f6f6;
-    /* левый нижний угол не обрезало!!! */
     border-radius: 15px; 
     display: inline-block;
 }
@@ -299,10 +298,13 @@ li {
     width: 33.33%;
     float: left;
     text-align: left;
-    /* margin: 50px 0 35px 0; */
     padding: 0 25px 0 25px;
-    background: #f6f6f6;/* dont work */
 }
+.arow_box {
+    background:black ;
+
+}
+
 
 .content_item a {
     background-color: #cdcdcd;
@@ -364,9 +366,11 @@ li {
 footer{
     margin-top: 35px;
     border-top: 2px solid #aeaeae ;
-    
-    
 }
+.down_menu{
+    width: 100%;
+}
+
 .down_menu ul li{
     display: inline;
     list-style: none;
