--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ header {
     margin: 0 auto;
 }
 
-ul{
+ul{ width: 100%;
 
 }
 
@@ -104,9 +104,9 @@ li {
 }
 
 #top-search {  
-    /* !!!! dont work */
     position: relative;
-    width: 25%;
+    max-width: 230px;
+    width: auto;
     height: 37px;
 }
 
@@ -201,18 +201,18 @@ li {
 .nav{
     text-align: center;
 }
-/* down menu */
+/* menu */
 .navTop {
     background: url(../img/nav_bg.png) no-repeat; 
     /* !!!not all width */
     height: 64px;
     width: 100%;
     /* clear: both; */
-    background-color: cyan;
+    /* background-color: cyan; */
 }
 
 .menu {
-    /* width: 100%;
+    /* width: 100%; */
     margin: 0;
     /* padding-left: 41px; */
 
@@ -221,28 +221,34 @@ li {
 
     list-style: none;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+    /* align-items: center; */
+    /* при удалении строчким меню поднимаются вверх */
+    
+    /* justify-content: center; */
+    /* margin-top: 50px; */
     padding: 0;
 }
 
 .menu_item {
-    /* float: left; */
+    float: left;
     /* display: inline; */
-    /* padding: 0 35px 0 40px; */
-    /* background: url(img/nav_marker.png) no-repeat right center; */
+    padding: 0 35px 0 40px;
     /* не работает вставка шариков между ссылками меню*/
+    /* align-items: center;
+    justify-content: center; */
     display: flex;
   margin: 0px 15px;
 }
 .menu_item a {
     text-decoration: none;
-    color: #555555;
+    color: #404040;
+    font-size: 28px;
+    font-family: 'Birch Std';
 }
 .menu_item .active {
     text-decoration: none;
     color: #5363db;
+    
 }
 .menu_item_center {
     display: block;
@@ -251,8 +257,9 @@ li {
     padding: 0 150px;
     margin: 0;
     text-align: center;
+    /* position: absolute; */
 }
-.logo_link {
+#logo_link {
     display: inline-block;
   }
   
@@ -261,10 +268,7 @@ li {
   }
 
 /* .menu a {
-    color: #404040;
-    text-decoration: none;
-    font-size: 28px;
-    font-family: 'Birch Std';
+   
 }
 
 .menu:last-child {
@@ -515,9 +519,11 @@ float: left;
 footer{
     margin-top: 35px;
     border-top: 2px solid #aeaeae ;
+    width: 100%;
 }
 .down_menu{
-    width: 100%;
+    width: 100%;    
+    text-align: center;
 }
 
 .down_menu ul li{
@@ -552,7 +558,7 @@ footer{
     height: 30px;
     text-align: center;
     border-radius: 50px;
-    margin: 30px;
+    margin: 7px;
     position: fixed;
     bottom: 30px;
     right: 30px;
