--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ header {
 }
 
 ul{ width: 100%;
+    position: relative;
 
 }
 
@@ -136,12 +137,11 @@ li {
 
 .icon-bar {
     position: absolute;
-    /* помогло */
     top: 30px;
     right: 30px;
-  }
+}
 
-  .icon-bar a {
+.icon-bar a {
     padding: 5px;
     font-size: 16px;
     width: 1px;
@@ -151,62 +151,39 @@ li {
     border-radius: 50%;
     transition: all 0.3s ease;
     color: #fff;
-  }
+}
   
-  .icon-bar a:hover {
+.icon-bar a:hover {
     background-color: #000;
-  }
+}
   
-  .facebook {
+.facebook {
     background: #3b5999;
-  }
+}
   
-  .twitter {
+.twitter {
     background: #55ACEE;
-  }
-  .rss {
+}
+.rss {
     background: #ef9200;
-  }
-  .email{
+}
+.email{
     background: #b0b0b0;
-  }
+}
 
-/* .logo_container{
-    padding: 0;
-    margin: 0;
-    background-color: #fff;
-    border-radius: 20%;
-    width: 1%;
-} */
-/* .logo { */
-    /* display: inline;
-    padding: 0;
-    margin: 0;
-    /* top: 15px; */
-    /* padding-left: 40%;
-    
-    max-width: 190px; 
-    /* !!!check work */
-    /* width: 100%;
-    max-height: 190px;
-    height: auto;
-    
-    display: block;
-    position: absolute;
-    z-index:120;
-    margin-left: auto;
-    margin-right: auto;  
- }
-  */
+
 .nav{
     text-align: center;
 }
 /* menu */
 .navTop {
-    background: url(../img/nav_bg.png) no-repeat; 
+    background: url(../img/nav_bg.png) no-repeat;
+    
+    
     /* !!!not all width */
+    /* max-width: 100%; */
+    width: 100%;      
     height: 64px;
-    width: 100%;
     /* clear: both; */
     /* background-color: cyan; */
 }
@@ -253,6 +230,11 @@ li {
 .menu_item_center {
     display: block;
 }
+.menu_item_logo{
+    position: relative;
+
+}
+
 .logo {
     padding: 0 150px;
     margin: 0;
@@ -263,14 +245,46 @@ li {
     display: inline-block;
   }
   
-  .logo_img {
+.logo_img {
     display: block;
-  }
-
-/* .menu a {
-   
+    max-width: 190px; 
+    min-width: 50px;
+    /* !!!check work */
+    width: 100%;
+    max-height: 190px;
+    height: auto;
 }
 
+/* .logo_container{
+    padding: 0;
+    margin: 0;
+    background-color: #fff;
+    border-radius: 20%;
+    width: 1%;
+} */
+/* .logo { */
+    /* display: inline;
+    padding: 0;
+    margin: 0;
+    /* top: 15px; */
+    /* padding-left: 40%;
+    
+    max-width: 190px; 
+    /* !!!check work */
+    /* width: 100%;
+    max-height: 190px;
+    height: auto;
+    
+    display: block;
+    position: absolute;
+    z-index:120;
+    margin-left: auto;
+    margin-right: auto;  
+ }
+  */
+
+
+/* 
 .menu:last-child {
     float: right;
 } */
@@ -565,14 +579,14 @@ footer{
     transition: background-color .3s;
     z-index: 1000;
 }
-  #top_button:hover {
+#top_button:hover {
     cursor: pointer;
     background-color: #27aac6;
 }
-  #top_button:active {
+#top_button:active {
     background-color: #555;
 }
-  #top_button::after {
+#top_button::after {
   content: "\f106";
   font-family:"Font Awesome 5 Free";
   font-weight: 900;
@@ -595,7 +609,6 @@ footer{
     position:absolute;
     height:40px;   
 }
-  
   /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
@@ -606,11 +619,11 @@ footer{
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
+}
   /* Add a background color to the active dot/circle */
 .active, .dot:hover {
     background-color: #717171;
-  }
+}
 
 
 
