--- a/css/main.css
+++ b/css/main.css
@@ -170,42 +170,35 @@ li {
 .email{
     background: #b0b0b0;
 }
-
-
 .nav{
     text-align: center;
 }
 /* menu */
 .navTop {
-    background: url(../img/nav_bg.png) no-repeat;
-    
-    
     /* !!!not all width */
     /* max-width: 100%; */
     width: 100%;      
     height: 64px;
+    /* height: auto;  */
+    /* логотип привязан в верхнему краю меню */
     /* clear: both; */
     /* background-color: cyan; */
 }
-
 .menu {
     /* width: 100%; */
     margin: 0;
+    padding: 0;
+    background: url(../img/nav_bg.png) no-repeat;
     /* padding-left: 41px; */
-
     /* display: inline;
      */
-
     list-style: none;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     /* при удалении строчким меню поднимаются вверх */
-    
     /* justify-content: center; */
     /* margin-top: 50px; */
-    padding: 0;
 }
-
 .menu_item {
     float: left;
     /* display: inline; */
@@ -221,20 +214,28 @@ li {
     color: #404040;
     font-size: 28px;
     font-family: 'Birch Std';
+    float: left;
+    display: block;
+    text-align: center;
+} 
+.menu a.activ_menu {
+    color: #af2330;
 }
-.menu_item .active {
-    text-decoration: none;
-    color: #5363db;
-    
+.menu .icon_menu {
+    display: none;
+    /* Скройте ссылку, которая должна открывать и закрывать topnav на маленьких экранах */
 }
 .menu_item_center {
     display: block;
 }
-.menu_item_logo{
-    position: relative;
 
+.menu:last-child {
+    float: right;
 }
 
+.menu_item_logo{
+    position: relative;
+}
 .logo {
     padding: 0 150px;
     margin: 0;
@@ -243,7 +244,7 @@ li {
 }
 #logo_link {
     display: inline-block;
-  }
+}
   
 .logo_img {
     display: block;
@@ -254,6 +255,7 @@ li {
     max-height: 190px;
     height: auto;
 }
+
 
 /* .logo_container{
     padding: 0;
@@ -284,11 +286,7 @@ li {
   */
 
 
-/* 
-.menu:last-child {
-    float: right;
-} */
-
+ 
 #title{
     width: 100%;  
 }
@@ -626,4 +624,28 @@ footer{
 }
 
 
+
+/* Если ширина экрана меньше 600 пикселей, скрыть все ссылки, кроме первой («Home»). Показать ссылку, которая должна открывать и закрывать topnav (.icon) */
+@media screen and (max-width: 600px) {
+.menu a:not(:first-child) {display: none;}
+    .menu a.icon_menu {
+      float: right;
+      display: block;
+    }
+}
+
+  /* Класс «responsive» добавляется в topnav с помощью JavaScript, когда пользователь нажимает на иконку. Этот класс заставляет topnav хорошо выглядеть на маленьких экранах (отображать ссылки вертикально, а не горизонтально) */
+@media screen and (max-width: 600px) {
+.menu.responsive {position: relative;}
+    .menu.responsive a.icon_menu {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .menu.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+}
 
