--- a/css/main.css
+++ b/css/main.css
@@ -73,13 +73,10 @@ header {
 }
 .container {
     width: 100%;
-    margin: 0 auto;
-    border: 3px solid red;
-    
+    margin: 0 auto;   
 }
 ul{
     position: relative;
-    border: 3px solid yellow;
 }
 li {
     display: inline;
@@ -156,7 +153,8 @@ li {
     /* !!!not all width */
     /* max-width: 100%; */
     width: 100%;      
-    height: 64px;
+    /* height: 64px; */
+    margin-bottom: 64px;
     /* height: auto;  */
     /* логотип привязан в верхнему краю меню */
     /* clear: both; */
@@ -168,14 +166,11 @@ li {
     margin: 0;
     padding: 0;
     background: url(../img/nav_bg.png) no-repeat;
-    /* padding-left: 41px; */
-    /* display: inline;
-     */
     list-style: none;
     display: flex;
     align-items: center;
     /* при удалении строчким меню поднимаются вверх */
-    /* justify-content: center; */
+    justify-content: center;
     /* margin-top: 50px; */
 }
 .menu_item {
@@ -260,8 +255,7 @@ li {
 #title{
     width: 100%;  
 }
-.titles {
-    /* margin-top: 60px; */
+.titles {    
     padding: 60px 0 80px 0;
     position:relative;
     text-align: center;
@@ -292,7 +286,6 @@ li {
     display: inline-block;
     border-bottom: 2px solid #aeaeae;
     margin-bottom: 35px;
-    border: 2px solid green;
 }
 .services {
     margin-top: 50px;
@@ -573,8 +566,6 @@ If the screen width is less than 600 pixels, hide all links except the first («
       display: block;
     }
 }
-
-
 /* 
  Класс «responsive» добавляется в topnav с помощью JavaScript, когда пользователь нажимает на иконку. Этот класс заставляет topnav хорошо выглядеть на маленьких экранах (отображать ссылки вертикально, а не горизонтально) */
 @media screen and (max-width: 600px) {
